resilient/tests/snapshots/diagnostics_snapshots__typecheck_call_arity_mismatch@typecheck_call_arity_mismatch.snap
---
source: resilient/tests/diagnostics_snapshots.rs
assertion_line: 159
description: "fn add(int a, int b) {\n    return a + b;\n}\nfn main(int _d) {\n    return add(1);\n}\nmain(0);\n"
expression: output
---
Running type checker...
Type error: <tmp>.rs:5:16: Expected 2 arguments, got 1
<tmp>.rs:5:16: Expected 2 arguments, got 1
Type error: Expected 2 arguments, got 1
       return add(1);
                  ^
Error: Type check failed: <tmp>.rs:5:16: Expected 2 arguments, got 1
